--- a/environment.yml
+++ b/environment.yml
@@ -23,9 +23,9 @@ dependencies:
   - brotlipy=0.7.0=py39hb9d737c_1005
   - bzip2=1.0.8=h7f98852_4
   - c-ares=1.18.1=h7f98852_0
-  - ca-certificates=2022.12.7=ha878542_0
+  - ca-certificates=2023.01.10=h06a4308_0
   - cairo=1.16.0=ha61ee94_1014
-  - certifi=2022.12.7=pyhd8ed1ab_0
+  - certifi=2022.12.7=py39h06a4308_0
   - cffi=1.15.1=py39he91dace_3
   - charset-normalizer=2.1.1=pyhd8ed1ab_0
   - comm=0.1.3=pyhd8ed1ab_0
@@ -262,6 +262,7 @@ dependencies:
   - toml=0.10.2=pyhd8ed1ab_0
   - torchvision=0.14.1=cuda112py39hb350dc8_1
   - tornado=6.2=py39hb9d737c_1
+  - tqdm=4.65.0=py39hb070fc8_0
   - traitlets=5.9.0=pyhd8ed1ab_0
   - typing-extensions=4.5.0=hd8ed1ab_0
   - typing_extensions=4.5.0=pyha770c72_0
@@ -303,4 +304,4 @@ dependencies:
   - zipp=3.15.0=pyhd8ed1ab_0
   - zlib=1.2.13=h166bdaf_4
   - zstd=1.5.2=h3eb15da_6
-prefix: /home/colinfx/anaconda3/envs/torch-signal
+prefix: /home/infres/xfei/miniconda3/envs/torch-signal
