--- a/environment.yml
+++ b/environment.yml
@@ -5,6 +5,8 @@ channels:
 dependencies:
   - _libgcc_mutex=0.1=conda_forge
   - _openmp_mutex=4.5=2_kmp_llvm
+  - _py-xgboost-mutex=2.0=gpu_0
+  - alembic=1.11.1=pyhd8ed1ab_0
   - alsa-lib=1.2.8=h166bdaf_0
   - anyio=3.6.2=pyhd8ed1ab_0
   - aom=3.5.0=h27087fc_0
@@ -23,11 +25,15 @@ dependencies:
   - brotlipy=0.7.0=py39hb9d737c_1005
   - bzip2=1.0.8=h7f98852_4
   - c-ares=1.18.1=h7f98852_0
-  - ca-certificates=2023.01.10=h06a4308_0
+  - ca-certificates=2023.5.7=hbcca054_0
   - cairo=1.16.0=ha61ee94_1014
-  - certifi=2022.12.7=py39h06a4308_0
+  - catboost=1.0.4=py39hf3d152e_1
+  - certifi=2023.5.7=pyhd8ed1ab_0
   - cffi=1.15.1=py39he91dace_3
   - charset-normalizer=2.1.1=pyhd8ed1ab_0
+  - cmaes=0.9.1=pyhd8ed1ab_0
+  - colorama=0.4.6=pyhd8ed1ab_0
+  - colorlog=6.7.0=py39hf3d152e_1
   - comm=0.1.3=pyhd8ed1ab_0
   - contourpy=1.0.7=py39h4b4f3f3_0
   - cryptography=40.0.1=py39h079d5ae_0
@@ -60,6 +66,7 @@ dependencies:
   - gmp=6.2.1=h58526e2_0
   - gnutls=3.7.8=hf3e180e_0
   - graphite2=1.3.13=h58526e2_1001
+  - greenlet=2.0.2=py39h3d6467e_1
   - gst-plugins-base=1.22.0=h4243ec0_2
   - gstreamer=1.22.0=h25f0c4b_2
   - gstreamer-orc=0.4.33=h166bdaf_0
@@ -79,6 +86,7 @@ dependencies:
   - jasper=4.0.0=h32699f2_1
   - jedi=0.18.2=pyhd8ed1ab_0
   - jinja2=3.1.2=pyhd8ed1ab_1
+  - joblib=1.2.0=pyhd8ed1ab_0
   - jsonschema=4.17.3=pyhd8ed1ab_0
   - jupyter=1.0.0=py39hf3d152e_8
   - jupyter_client=8.1.0=pyhd8ed1ab_0
@@ -157,12 +165,15 @@ dependencies:
   - libvpx=1.11.0=h9c3ff4c_3
   - libwebp-base=1.3.0=h0b41bf4_0
   - libxcb=1.13=h7f98852_1004
+  - libxgboost=1.7.4=cuda112h075c576_0
   - libxkbcommon=1.5.0=h79f4944_1
   - libxml2=2.10.3=hca2bb57_4
   - libzlib=1.2.13=h166bdaf_4
+  - lightgbm=3.3.5=py39h227be39_0
   - llvm-openmp=16.0.0=h417c0b6_0
   - lz4-c=1.9.4=hcb278e6_0
   - magma=2.6.2=hc72dce7_0
+  - mako=1.2.4=pyhd8ed1ab_0
   - markupsafe=2.1.2=py39h72bdee0_0
   - matplotlib=3.7.1=py39hf3d152e_0
   - matplotlib-base=3.7.1=py39he190548_0
@@ -192,7 +203,8 @@ dependencies:
   - opencv=4.7.0=py39hf3d152e_2
   - openh264=2.3.1=hcb278e6_2
   - openjpeg=2.5.0=hfec8fc6_2
-  - openssl=3.1.0=h0b41bf4_0
+  - openssl=3.1.1=hd590300_1
+  - optuna=3.2.0=pyhd8ed1ab_0
   - p11-kit=0.24.1=hc5aa10d_0
   - packaging=23.0=pyhd8ed1ab_0
   - pandas=1.5.3=py39h2ad29b5_0
@@ -220,6 +232,7 @@ dependencies:
   - pulseaudio-daemon=16.1=ha8d29e2_3
   - pure_eval=0.2.2=pyhd8ed1ab_0
   - py-opencv=4.7.0=py39hcca971b_2
+  - py-xgboost=1.7.4=cuda112py39h01bd6f0_0
   - pycparser=2.21=pyhd8ed1ab_0
   - pygments=2.14.0=pyhd8ed1ab_0
   - pyopenssl=23.1.0=pyhd8ed1ab_0
@@ -245,6 +258,7 @@ dependencies:
   - requests=2.28.2=pyhd8ed1ab_0
   - rfc3339-validator=0.1.4=pyhd8ed1ab_0
   - rfc3986-validator=0.1.1=pyh9f0ad1d_0
+  - scikit-learn=1.2.2=py39hd189fd4_1
   - scipy=1.10.1=py39h7360e5f_0
   - send2trash=1.8.0=pyhd8ed1ab_0
   - setuptools=67.6.0=pyhd8ed1ab_0
@@ -253,16 +267,18 @@ dependencies:
   - sleef=3.5.1=h9b69904_2
   - sniffio=1.3.0=pyhd8ed1ab_0
   - soupsieve=2.3.2.post1=pyhd8ed1ab_0
+  - sqlalchemy=2.0.16=py39hd1e30aa_0
   - stack_data=0.6.2=pyhd8ed1ab_0
   - svt-av1=1.4.1=hcb278e6_0
   - tbb=2021.8.0=hf52228f_0
   - terminado=0.17.1=pyh41d4057_0
+  - threadpoolctl=3.1.0=pyh8a188c0_0
   - tinycss2=1.2.1=pyhd8ed1ab_0
   - tk=8.6.12=h27826a3_0
   - toml=0.10.2=pyhd8ed1ab_0
   - torchvision=0.14.1=cuda112py39hb350dc8_1
   - tornado=6.2=py39hb9d737c_1
-  - tqdm=4.65.0=py39hb070fc8_0
+  - tqdm=4.65.0=pyhd8ed1ab_1
   - traitlets=5.9.0=pyhd8ed1ab_0
   - typing-extensions=4.5.0=hd8ed1ab_0
   - typing_extensions=4.5.0=pyha770c72_0
@@ -281,6 +297,7 @@ dependencies:
   - xcb-util-keysyms=0.4.0=h166bdaf_0
   - xcb-util-renderutil=0.3.9=h166bdaf_0
   - xcb-util-wm=0.4.1=h166bdaf_0
+  - xgboost=1.7.4=cuda112py39heb5920e_0
   - xkeyboard-config=2.38=h0b41bf4_0
   - xorg-fixesproto=5.0=h7f98852_1002
   - xorg-inputproto=2.3.2=h7f98852_1002
@@ -304,4 +321,4 @@ dependencies:
   - zipp=3.15.0=pyhd8ed1ab_0
   - zlib=1.2.13=h166bdaf_4
   - zstd=1.5.2=h3eb15da_6
-prefix: /home/infres/xfei/miniconda3/envs/torch-signal
+prefix: /home/colinfx/anaconda3/envs/torch-signal
